--- a/editor/package.json
+++ b/editor/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "immutable": "^4.0.0-rc.12",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0",
+    "slate": "^0.47.9",
+    "slate-auto-replace": "^0.12.1",
+    "slate-react": "^0.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
