--- a/editor/package.json
+++ b/editor/package.json
@@ -8,8 +8,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "slate": "^0.52.5",
-    "slate-react": "^0.52.5"
+    "slate": "^0.52.6",
+    "slate-react": "^0.52.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "hygen-add": "^1.0.5"
   }
 }
