--- a/editor/package.json
+++ b/editor/package.json
@@ -8,8 +8,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "slate": "^0.52.6",
-    "slate-react": "^0.52.7"
+    "slate": "^0.57.1",
+    "slate-history": "^0.57.1",
+    "slate-react": "^0.57.1"
   },
   "scripts": {
     "start": "react-scripts start",
