--- a/editor/package.json
+++ b/editor/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@types/slate": "^0.47.8",
+    "@types/slate-react": "^0.22.9",
     "bootstrap": "^4.5.3",
     "emotion": "^10.0.23",
     "globalize": "^1.6.0",
     "katex": "^0.12.0",
+    "mathjs": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
@@ -22,6 +25,7 @@
     "react-widgets-globalize": "^5.0.23",
     "react-widgets-simple-number": "^4.1.26",
     "slate": "^0.57.3",
+    "slate-editable-table": "^0.2.3",
     "slate-history": "^0.57.1",
     "slate-react": "^0.57.3",
     "typescript": "^4.0.5",
@@ -49,7 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.56",
+    "@types/react": "^17.0.0",
     "hygen-add": "^1.0.5"
   }
 }
