--- a/editor/package.json
+++ b/editor/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@material-ui/core": "^4.11.2",
     "@types/slate": "^0.47.8",
     "@types/slate-react": "^0.22.9",
     "bootstrap": "^4.5.3",
